# ida-setup

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: plugin-packaging.md
skills/ida-setup/: SKILL.md
src/ida_setup/: _common.py  _ida.py  _launchagent.py  _plugins.py  _probe.py  _run.py  _venv.py  cli.py
tests/: test_cli.py  test_common.py  test_ida.py  test_ida_reg.py  test_launchagent.py  test_plugins.py  test_plugins_install.py  test_probe.py  test_python_resolution.py  test_run.py  test_venv.py
