[project]
name = "labs-ida-setup"
dynamic = ["version"]
description = "IDA Pro Python environment toolkit for macOS"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.scripts]
ida-setup = "ida_setup.cli:main_cli"

[dependency-groups]
dev = ["ruff"]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Defaults: E4/E7/E9/F. Extra: B=bugbear, I=import sorting, UP=modern Python
extend-select = ["B", "I", "UP"]
